--- a/package.json
+++ b/package.json
@@ -14,15 +14,22 @@
     "@react-navigation/drawer": "^6.4.1",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/stack": "^6.2.1",
+    "@reduxjs/toolkit": "^1.8.1",
     "axios": "^0.26.1",
     "fbjs": "^3.0.4",
     "firebase": "^9.6.11",
     "react": "17.0.2",
     "react-native": "0.68.0",
+    "react-native-camera": "^4.2.1",
+    "react-native-document-picker": "^8.1.1",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-reanimated": "^2.8.0",
     "react-native-safe-area-context": "^4.2.4",
-    "react-native-screens": "^3.13.1"
+    "react-native-screens": "^3.13.1",
+    "react-redux": "^8.0.1",
+    "redux": "^4.2.0",
+    "redux-thunk": "^2.4.1",
+    "remote-redux-devtools": "^0.5.16"
   },
   "devDependencies": {
     "@babel/core": "7.17.8",
